--- a/resources/monitor/etc/monitor/templates/partials/sidebar.html
+++ b/resources/monitor/etc/monitor/templates/partials/sidebar.html
@@ -7,7 +7,7 @@
     <a href="{{ url_for('dashboard') }}" class="menu-item {% if request.endpoint == 'dashboard' %}active{% endif %}">
         <span>Системный монитор</span>
     </a>
-    <a href="{{ url_for('settings_page') }}" class="menu-item {% if request.endpoint == 'settings_page' %}active{% endif %}">
+    <a href="{{ url_for('settings_page') }}" class="menu-item {% if request.endpoint == 'settings_page' %}active{% endif %}" {% if request.endpoint == 'settings_page' %}aria-current="page"{% endif %}>
         <span>Настройки</span>
     </a>
     <a href="{{ url_for('routing_page') }}" class="menu-item {% if request.endpoint == 'routing_page' %}active{% endif %}">
