--- a/resources/monitor/etc/monitor/templates/partials/sidebar.html
+++ b/resources/monitor/etc/monitor/templates/partials/sidebar.html
@@ -1,45 +1,50 @@
 <div class="sidebar-menu">
-    <div class="logo-container">
-        <h1 class="logo">
-            <span class="logo-all">All</span><span class="logo-allow">ow</span>
-        </h1>
-    </div>
-    <a href="{{ url_for('dashboard') }}" class="menu-item {% if request.endpoint == 'dashboard' %}active{% endif %}">
-        <span>Системный монитор</span>
-    </a>
-    <a href="{{ url_for('settings_page') }}" class="menu-item {% if request.endpoint == 'settings_page' %}active{% endif %}" {% if request.endpoint == 'settings_page' %}aria-current="page"{% endif %}>
-        <span>Настройки</span>
-    </a>
-    <a href="{{ url_for('routing_page') }}" class="menu-item {% if request.endpoint == 'routing_page' %}active{% endif %}">
-        <span>Маршрутизация</span>
-    </a>
-    <details class="menu-group" {% if request.endpoint in ['dnsmasq_page', 'dnsmasq_family_page', 'stubby_page', 'stubby_family_page', 'sing_box_page'] %}open{% endif %}>
-        <summary class="menu-item menu-group-summary">
-            <span>Расширенные настройки</span>
-        </summary>
-        <div class="menu-sublist">
-            <a href="{{ url_for('dnsmasq_page') }}" class="menu-item menu-subitem {% if request.endpoint == 'dnsmasq_page' %}active{% endif %}">
-                <span>Dnsmasq-full</span>
-            </a>
-            <a href="{{ url_for('dnsmasq_family_page') }}" class="menu-item menu-subitem {% if request.endpoint == 'dnsmasq_family_page' %}active{% endif %}">
-                <span>Dnsmasq-full family</span>
-            </a>
-            <a href="{{ url_for('stubby_page') }}" class="menu-item menu-subitem {% if request.endpoint == 'stubby_page' %}active{% endif %}">
-                <span>Stubby</span>
-            </a>
-            <a href="{{ url_for('stubby_family_page') }}" class="menu-item menu-subitem {% if request.endpoint == 'stubby_family_page' %}active{% endif %}">
-                <span>Stubby-family</span>
-            </a>
-            <a href="{{ url_for('sing_box_page') }}" class="menu-item menu-subitem {% if request.endpoint == 'sing_box_page' %}active{% endif %}">
-                <span>Sing-box</span>
-            </a>
+    <div class="sidebar-menu-top">
+        <div class="logo-container">
+            <h1 class="logo">
+                <span class="logo-all">All</span><span class="logo-allow">ow</span>
+            </h1>
         </div>
-    </details>
-    <a href="{{ url_for('change_password_page') }}" class="menu-item {% if request.endpoint == 'change_password_page' %}active{% endif %}">
-        <span>Смена пароля</span>
-    </a>
-    <a href="/logout.html" class="menu-item menu-item-logout">
-        <span>Выход</span>
-    </a>
+        <a href="{{ url_for('dashboard') }}" class="menu-item {% if request.endpoint == 'dashboard' %}active{% endif %}">
+            <span>Системный монитор</span>
+        </a>
+        <a href="{{ url_for('settings_page') }}" class="menu-item {% if request.endpoint == 'settings_page' %}active{% endif %}" {% if request.endpoint == 'settings_page' %}aria-current="page"{% endif %}>
+            <span>Настройки</span>
+        </a>
+        <a href="{{ url_for('routing_page') }}" class="menu-item {% if request.endpoint == 'routing_page' %}active{% endif %}">
+            <span>Маршрутизация</span>
+        </a>
+        <details class="menu-group" {% if request.endpoint in ['dnsmasq_page', 'dnsmasq_family_page', 'stubby_page', 'stubby_family_page', 'sing_box_page'] %}open{% endif %}>
+            <summary class="menu-item menu-group-summary">
+                <span>Расширенные настройки</span>
+            </summary>
+            <div class="menu-sublist">
+                <a href="{{ url_for('dnsmasq_page') }}" class="menu-item menu-subitem {% if request.endpoint == 'dnsmasq_page' %}active{% endif %}">
+                    <span>Dnsmasq-full</span>
+                </a>
+                <a href="{{ url_for('dnsmasq_family_page') }}" class="menu-item menu-subitem {% if request.endpoint == 'dnsmasq_family_page' %}active{% endif %}">
+                    <span>Dnsmasq-full family</span>
+                </a>
+                <a href="{{ url_for('stubby_page') }}" class="menu-item menu-subitem {% if request.endpoint == 'stubby_page' %}active{% endif %}">
+                    <span>Stubby</span>
+                </a>
+                <a href="{{ url_for('stubby_family_page') }}" class="menu-item menu-subitem {% if request.endpoint == 'stubby_family_page' %}active{% endif %}">
+                    <span>Stubby-family</span>
+                </a>
+                <a href="{{ url_for('sing_box_page') }}" class="menu-item menu-subitem {% if request.endpoint == 'sing_box_page' %}active{% endif %}">
+                    <span>Sing-box</span>
+                </a>
+            </div>
+        </details>
+    </div>
+    <div class="sidebar-menu-bottom">
+        <a href="{{ url_for('change_password_page') }}" class="menu-item {% if request.endpoint == 'change_password_page' %}active{% endif %}">
+            <span>Смена пароля</span>
+        </a>
+        <a href="/logout.html" class="menu-item menu-item-logout">
+            <span>Выход</span>
+        </a>
+        <div class="sidebar-version">version 0.01</div>
+    </div>
 </div>
 
