--- a/resources/monitor/etc/monitor/templates/base.html
+++ b/resources/monitor/etc/monitor/templates/base.html
@@ -41,6 +41,7 @@
     <script src="{{ url_for('static', filename='logs-viewer.js') }}"></script>
     <script src="{{ url_for('static', filename='confirm-modal.js') }}"></script>
     <script src="{{ url_for('static', filename='progress-overlay.js') }}"></script>
+    <script src="{{ url_for('static', filename='mobile-menu.js') }}"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
